--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -55,6 +55,18 @@
             </td>
           </ng-container>
 
+            <ng-container matColumnDef="ver_empleado">
+                <th mat-header-cell *matHeaderCellDef>Ver Empleado</th>
+                <td mat-cell *matCellDef="let user">
+                  <button
+                  mat-icon-button
+                  style="justify-content: right;"
+                  (click)="verDetalles(user)">
+                  <mat-icon>preview</mat-icon>
+                </button>
+                </td>
+              </ng-container>
+
           <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef>Acciones</th>
             <td mat-cell *matCellDef="let user">
