--- a/src/app/components/garantias/garantias.component.html
+++ b/src/app/components/garantias/garantias.component.html
@@ -13,6 +13,11 @@
         <div class="container-table">
           <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
+            <ng-container matColumnDef="codigo">
+              <th mat-header-cell *matHeaderCellDef>Codigo</th>
+              <td mat-cell *matCellDef="let garantia">{{ garantia.codigo }}</td>
+            </ng-container>
+
             <ng-container matColumnDef="fecha_inicio">
               <th mat-header-cell *matHeaderCellDef>Fecha de Inicio</th>
               <td mat-cell *matCellDef="let garantia">
